#31609 was a hotfix to ensure that Jetpack connect site vertical results weren't cut off. This PR reinstates the position: absolute so that the fieldset floats over the site preview, but also sets the layout overflow to visible on Jetpack to avoid cutting off the results list.

--- a/client/jetpack-connect/style.scss
+++ b/client/jetpack-connect/style.scss
@@ -7,7 +7,7 @@ $colophon-height: 50px; // wpcomColophon element at the bottom
 		// Adjust the padding as we no longer
 		// show the masterbar.
 		padding-top: 48px;
-
+		overflow: visible;
 		& > .banner {
 			max-width: 600px;
 		}
